Add addtional java options with export and opens (#11231)
Fixes https://github.com/JabRef/jabref/issues/11225